# ATM-Tray

./: .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  使用说明.md
.github/workflows/: build.yml
src/: index.html  renderer.js  styles.css  tray-renderer.js  tray-styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  crypto.rs  main.rs  security.rs  storage.rs
updater/: Cargo.toml
updater/src/: main.rs
